# network-forensics-evidence-correlator

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt  wsgi.py
dashboard/: app.py
data/sample/: ids_alerts.json
site/: app.js  index.html  styles.css
site/sample/: firewall_logs.csv  pcap_events.csv
src/correlator/: __init__.py  analysis.py  cli.py  mitre.py  models.py  normalization.py  pipeline.py  reporting.py  scoring.py  utils.py
tests/: test_web_app.py
web/: app.py
web/templates/: compare.html  index.html  login.html  result.html  saved_run.html
